[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Player/Particles/engine_fire_2.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/ship_icon.png" type="Texture" id=2]
[ext_resource path="res://Objects/Player/PlayerBody.gd" type="Script" id=3]
[ext_resource path="res://Objects/Player/Particles/Particles.gd" type="Script" id=4]
[ext_resource path="res://Objects/Player/Particles/side_thrust.png" type="Texture" id=5]
[ext_resource path="res://Objects/Player/Particles/SideParticlesMaterial.tres" type="Material" id=6]
[ext_resource path="res://Objects/Items/HomingMissile/Missile.png" type="Texture" id=7]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.34

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.105469, 0.105469, 1, 0.857422, 1, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( -10, 0, 0 )
spread = 90.0
gravity = Vector3( -150, 0, 0 )
initial_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void fragment() {
	vec4 c = MODULATE;
	c.g = 0.0;
	c.b = 0.0;
	c.r = abs(sin(TIME*3.0))*1.0;
	c.a = abs(sin(TIME*3.0))*1.0;
	COLOR.rgba = c;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[node name="PlayerBody" type="RigidBody2D" groups=[
"Players",
]]
position = Vector2( -0.707886, 0 )
collision_layer = 2
collision_mask = 3
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
can_sleep = false
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0

[node name="ship_icon" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 1 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 11.9035, 4.95533 )
rotation = -1.5708
polygon = PoolVector2Array( -6.34309, -21.727, -10.5905, -5.44511, 5.69131, 18.1517, 21.9731, -5.68109, 15.602, -20.3111, 7.34308, -23.6147, 0.499997, -23.1428 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -75, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( -10, 30 )

[node name="RayCast2D3" type="RayCast2D" parent="."]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( -10, -30 )

[node name="NetworkTicker" type="Timer" parent="."]
process_mode = 0
wait_time = 0.01

[node name="Particles" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="EngineParticles" type="Particles2D" parent="Particles"]
position = Vector2( -10.7079, 0 )
z_index = -1
amount = 100
lifetime = 0.4
visibility_rect = Rect2( -21.8248, -9.8795, 21.8244, 19.8251 )
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="LeftSideParticles" type="Particles2D" parent="Particles"]
position = Vector2( 4.29211, -14 )
rotation = 1.0472
emitting = false
amount = 30
lifetime = 0.2
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -19.9644, -13.1157, 29.9427, 28.5906 )
local_coords = false
process_material = ExtResource( 6 )
texture = ExtResource( 5 )

[node name="RightSideParticles" type="Particles2D" parent="Particles"]
position = Vector2( 4.29211, 14 )
rotation = -1.0472
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -18.131, -15.5878, 32.4014, 27.7028 )
local_coords = false
process_material = ExtResource( 6 )
texture = ExtResource( 5 )

[node name="MissileEffect" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="MissileEffect"]
visible = false
modulate = Color( 0.290196, 0.290196, 0.290196, 1 )
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="ItemPanel" type="Panel" parent="PlayerUI"]
self_modulate = Color( 1, 1, 1, 0.396078 )
margin_left = -0.707886
margin_right = 99.2921
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer" type="TextureRect" parent="PlayerUI/ItemPanel"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="NetworkTicker" to="." method="_on_NetworkTicker_timeout"]
